// message-service/src/main/proto/message.proto
syntax = "proto3";
option java_multiple_files = true;
option java_package = "dcom.websocketsgateway";

service MessageService {
  rpc ProcessMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string channelId = 2;
  string content = 3;
  Author author = 4;
}

message Author {
  string id = 1;
  string username = 2;
}

message MessageResponse {
  string id = 1;
  string channelId = 2;
  string content = 3;
  string authorId = 4;
  int64 timestamp = 5;
  int64 editedTimestamp = 6;
}